refactor: eps 계산 및 직전년도 동일분기 계산로직 보강