@@ -1,6 +1,7 @@
 package com.momentum.domain.eps;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
 
 import com.momentum.domain.stock.Stock;
 import com.momentum.domain.stock.StockRegime;
@@ -8,6 +9,8 @@ import com.momentum.domain.stock.StockRepository;
 import com.momentum.domain.stock.StockTrend;
 import java.time.YearMonth;
 import java.util.List;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -19,54 +22,146 @@ class StockEpsServiceTest {
 
   @Autowired
   private StockEpsService stockEpsService;
-
   @Autowired
   private StockRepository stockRepository;
-
   @Autowired
   private StockEpsRepository stockEpsRepository;
 
-  @Test
-  void YoY_데이터가_없으면_null로_저장된다() {
-    Stock stock = stockRepository.save(Stock.of("삼성전자", "005930", StockRegime.UNKNOWN, StockTrend.UPTREND));
-    List<StockEpsInfo> infos = List.of(
-        StockEpsInfo.of(stock, "202412", "1200.0")
-    );
+  private Stock stock;
 
-    List<StockEps> result = stockEpsService.create(infos);
-
-    assertThat(result).hasSize(1);
-    assertThat(result.get(0).getYearOverYear()).isNull();
+  @BeforeEach
+  void setUp() {
+    stock = stockRepository.save(Stock.of("삼성전자", "005930", StockRegime.UNKNOWN, StockTrend.UPTREND));
   }
 
   @Test
-  void YoY_데이터가_있으면_계산해서_저장된다() {
-    Stock stock = stockRepository.save(Stock.of("삼성전자", "005930", StockRegime.UNKNOWN, StockTrend.UPTREND));
-    stockEpsRepository.saveAll(List.of(
-        new StockEps(1000.0, YearMonth.of(2023, 12), null, stock)
-    ));
-    List<StockEpsInfo> infos = List.of(
-        StockEpsInfo.of(stock, "202412", "1200.0")
-    );
+  @DisplayName("직전 연도 같은 분기가 없으면 전년 대비 변동률은 비워 둔다")
+  void create_withoutSameQuarterOfLastYear_leavesChangeRateNull() {
+    // given
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "1200.0"));
 
+    // when
     List<StockEps> result = stockEpsService.create(infos);
 
-    assertThat(result).hasSize(1);
-    assertThat(result.get(0).getYearOverYear()).isEqualTo(0.2);
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isNull();
   }
 
   @Test
-  void 여러_분기_EPS를_한번에_저장한다() {
-    Stock stock = stockRepository.save(Stock.of("삼성전자", "005930", StockRegime.UNKNOWN, StockTrend.UPTREND));
+  @DisplayName("직전 연도 같은 분기 대비 EPS 증감 비율을 전년 대비 변동률로 저장한다")
+  void create_withSameQuarterOfLastYear_savesChangeRate() {
+    // given
+    stockEpsRepository.saveAll(List.of(new StockEps(1_000.0, YearMonth.of(2023, 12), null, stock)));
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "1200.0"));
+
+    // when
+    List<StockEps> result = stockEpsService.create(infos);
+
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isEqualTo(0.2);
+  }
+
+  @Test
+  @DisplayName("직전 연도라도 분기가 다르면 전년 대비 변동률을 계산하지 않는다")
+  void create_withDifferentQuarterOfLastYear_leavesChangeRateNull() {
+    // given
+    stockEpsRepository.saveAll(List.of(new StockEps(1_000.0, YearMonth.of(2023, 9), null, stock)));
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "1200.0"));
+
+    // when
+    List<StockEps> result = stockEpsService.create(infos);
+
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isNull();
+  }
+
+  @Test
+  @DisplayName("EPS가 줄었으면 전년 대비 변동률이 음수가 된다")
+  void create_whenEpsDecreased_savesNegativeChangeRate() {
+    // given
+    stockEpsRepository.saveAll(List.of(new StockEps(1_000.0, YearMonth.of(2023, 12), null, stock)));
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "800.0"));
+
+    // when
+    List<StockEps> result = stockEpsService.create(infos);
+
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isEqualTo(-0.2);
+  }
+
+  @Test
+  @DisplayName("적자가 줄었으면 개선이므로 변동률이 양수가 된다")
+  void create_whenLossShrank_savesPositiveChangeRate() {
+    // given
+    stockEpsRepository.saveAll(List.of(new StockEps(-100.0, YearMonth.of(2023, 12), null, stock)));
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "-50.0"));
+
+    // when
+    List<StockEps> result = stockEpsService.create(infos);
+
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isEqualTo(0.5);
+  }
+
+  @Test
+  @DisplayName("적자에서 흑자로 돌아섰으면 변동률이 양수가 된다")
+  void create_whenTurnedProfitable_savesPositiveChangeRate() {
+    // given
+    stockEpsRepository.saveAll(List.of(new StockEps(-100.0, YearMonth.of(2023, 12), null, stock)));
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "100.0"));
+
+    // when
+    List<StockEps> result = stockEpsService.create(infos);
+
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isEqualTo(2.0);
+  }
+
+  @Test
+  @DisplayName("적자가 커졌으면 악화이므로 변동률이 음수가 된다")
+  void create_whenLossGrew_savesNegativeChangeRate() {
+    // given
+    stockEpsRepository.saveAll(List.of(new StockEps(-100.0, YearMonth.of(2023, 12), null, stock)));
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "-200.0"));
+
+    // when
+    List<StockEps> result = stockEpsService.create(infos);
+
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isEqualTo(-1.0);
+  }
+
+  @Test
+  @DisplayName("직전 연도 EPS가 0이었으면 변동률을 계산하지 않는다")
+  void create_whenLastYearEpsWasZero_leavesChangeRateNull() {
+    // given
+    stockEpsRepository.saveAll(List.of(new StockEps(0.0, YearMonth.of(2023, 12), null, stock)));
+    List<StockEpsInfo> infos = List.of(StockEpsInfo.of(stock, "202412", "100.0"));
+
+    // when
+    List<StockEps> result = stockEpsService.create(infos);
+
+    // then
+    assertThat(result.getFirst().getYearOverYearChangeRate()).isNull();
+  }
+
+  @Test
+  @DisplayName("여러 분기를 한 번에 저장한다")
+  void create_withMultipleQuarters_savesAll() {
+    // given
     List<StockEpsInfo> infos = List.of(
         StockEpsInfo.of(stock, "202409", "1100.0"),
         StockEpsInfo.of(stock, "202412", "1200.0")
     );
 
+    // when
     List<StockEps> result = stockEpsService.create(infos);
 
-    assertThat(result).hasSize(2);
-    assertThat(result).extracting(StockEps::getQuarterlyDate)
-        .containsExactlyInAnyOrder(YearMonth.of(2024, 9), YearMonth.of(2024, 12));
+    // then
+    assertSoftly(softly -> {
+      softly.assertThat(result).hasSize(2);
+      softly.assertThat(result).extracting(StockEps::getQuarter)
+          .containsExactlyInAnyOrder(YearMonth.of(2024, 9), YearMonth.of(2024, 12));
+    });
   }
 }
